kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-express-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: simple-express-app
