kubernetes/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: simple-express-app
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: simple-express-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: simple-express-app
              servicePort: 80
